--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -6,9 +6,8 @@
 
 }
 #output{
-    background-color: black;
+    background-color: lightcoral;
     display: flex;
     flex-direction: row;
     gap: 5px;
 }
-/*3.0*/
